已购买课程详情页的购买按钮隐藏

--- a/components/descourse/index.wxml
+++ b/components/descourse/index.wxml
@@ -15,7 +15,7 @@
     <view class="teacher">
       <image class="img" src="{{teacherImage}}" />
       <text class="teacherName">主讲师：{{teacherName}}</text>
-      <view class='buycourse' wx:if="{{isBuy}}">
+      <view class='buycourse' wx:if="{{!isBuy}}">
         <!-- <text bindtap="tobuy" data-id="{{courseId}}">购买</text> -->
         <text>{{price}}</text>
         <text class="yuan">￥</text>
